--- a/index.html
+++ b/index.html
@@ -10,167 +10,251 @@
 </head>
 
 <body>
-    <header class="header"> DawidSawczuk Setup Utility </header>
-    <nav class="menu">
-        <ul class="mainSlider">
-            <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
-            <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
-            <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
-            <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
-            <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
-        </ul>
-    </nav>
-    <div class="main">
-        <section class="container">
-            <div class="portrait">Please rotate your device</div>
-            <div class="col-left">
-                <section class="col-left-side">
-                    <div id='main'>
-                        <p class="blue" data-content="name">System Name:</p>
-                        <p class="blue" data-content="date">Creation Date:</p>
-                        <p class="blue margin" data-content="functionality">System Functionality:</p>
-                        <!-- / -->
-                        <p class="blue" data-content="hobbies">Hobbies Settings:</p>
-                        <p class="blue" data-content="cares">Caring Features:</p>
-                    </div>
-                    <div id='skills'>
-                        <p class="blue" data-content="php">PHP:</p>
-                        <p class="blue" data-content="symfony">Symfony2:</p>
-                        <p class="blue margin" data-content="mysql">MySQL:</p>
-                        <!-- / -->
-                        <p class="blue" data-content="js">JavaScript:</p>
-                        <p class="blue margin" data-content="jquery">jQuery:</p>
-                        <!-- / -->
-                        <p class="blue" data-content="html">HTML:</p>
-                        <p class="blue" data-content="css">CSS:</p>
-                    </div>
-                    <div id='education'>
-                        <p class="blue margin" data-content="cl">Coders Lab:</p>
-                        <!-- / -->
-                        <p class="blue" data-content="pader">Paderewski Private School:</p>
-                    </div>
-                    <div id='career'>
-                        <p class="blue margin" data-content="henderson">Henderson's:</p>
-                        <!-- / -->
-                        <p class="blue" data-content="sawczuk">SAWCZUK:</p>
-                    </div>
-                    <div id='exit'>
-                        <p class="blue" data-content="email">E-Mail:</p>
-                        <p class="blue" data-content="linkedin">LinkedIn:</p>
-                        <p class="blue" data-content="github">GitHub:</p>
-                    </div>
-                </section>
-                <section class="col-right-side">
-                    <div id='mainR'>
-                        <p class="black">[Dawid Sawczuk]</p>
-                        <p class="black">[11/11/1993]</p>
-                        <p class="black margin">[Junior Back-End Developer]</p>
-                        <!-- / -->
-                        <p class="black">[Enabled]</p>
-                        <p class="black">[Enabled]</p>
-                    </div>
-                    <div id='skillsR'>
-                        <p class="black">[Enabled]</p>
-                        <p class="black">[Enabled]</p>
-                        <p class="black margin">[Enabled]</p>
-                        <!-- / -->
-                        <p class="black">[Enabled]</p>
-                        <p class="black margin">[Enabled]</p>
-                        <!-- / -->
-                        <p class="black">[Enabled]</p>
-                        <p class="black">[Enabled]</p>
-                    </div>
-                    <div id='educationR'>
-                        <p class="black margin">[Finished]</p>
-                        <!-- / -->
-                        <p class="black">[Finished]</p>
-                    </div>
-                    <div id='careerR'>
-                        <p class="black margin">[Waiter]</p>
-                        <!-- / -->
-                        <p class="black">[Co-Owner]</p>
-                    </div>
-                    <div id='exitR'>
-                        <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
-                        <p class="black">[Link]</p>
-                        <p class="black">[Link]</p>
-                    </div>
-                </section>
-            </div>
-            <div class="col-right">
-                <div class="top">
-                    <p class="top-text">Item Specific Help</p>
+<header class="header"> DawidSawczuk Setup Utility</header>
+<nav class="menu">
+    <ul class="mainSlider">
+        <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
+        <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
+        <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a>
+        </li>
+        <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
+        <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
+    </ul>
+</nav>
+<div class="main">
+    <section class="container">
+        <div class="portrait">Please rotate your device</div>
+        <div class="col-left">
+            <section class="col-left-side">
+                <div id='main'>
+                    <p class="blue" data-content="name">System Name:</p>
+                    <p class="blue" data-content="date">Creation Date:</p>
+                    <p class="blue margin" data-content="functionality">System Functionality:</p>
+                    <!-- / -->
+                    <p class="blue" data-content="hobbies">Hobbies Settings:</p>
+                    <p class="blue" data-content="cares">Caring Features:</p>
                 </div>
-                <div class="content">
-                    <div id="name">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="date">
-                        <p>System's creation date</p>
-                    </div>
-                    <div id="functionality">
-                        <p>System's functionality</p>
-                    </div>
-                    <div id="hobbies">
-                        <p>System's hobbies</p>
-                    </div>
-                    <div id="cares">
-                        <p>System's cares</p>
-                    </div>
-                    <div id="php">
-                        <p>System's PHP.</p>
-                    </div>
-                    <div id="symfony">
-                        <p>System's Symfony.</p>
-                    </div>
-                    <div id="mysql">
-                        <p>System's MySQL.</p>
-                    </div>
-                    <div id="js">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="jquery">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="html">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="css">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="cl">
-                        <p>System's coders lab</p>
-                    </div>
-                    <div id="pader">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="henderson">
-                        <p>System's henderson</p>
-                    </div>
-                    <div id="sawczuk">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="email">
-                        <p>System's email</p>
-                    </div>
-                    <div id="linkedin">
-                        <p>System's given birth name.</p>
-                    </div>
-                    <div id="github">
-                        <p>System's given birth name.</p>
-                    </div>
+                <div id='skills'>
+                    <p class="blue" data-content="php">PHP:</p>
+                    <p class="blue" data-content="symfony">Symfony2:</p>
+                    <p class="blue margin" data-content="mysql">MySQL:</p>
+                    <!-- / -->
+                    <p class="blue" data-content="js">JavaScript:</p>
+                    <p class="blue margin" data-content="jquery">jQuery:</p>
+                    <!-- / -->
+                    <p class="blue" data-content="html">HTML:</p>
+                    <p class="blue" data-content="css">CSS:</p>
+                </div>
+                <div id='education'>
+                    <p class="blue margin" data-content="cl">Coders Lab:</p>
+                    <!-- / -->
+                    <p class="blue" data-content="pader">Paderewski Private School:</p>
+                </div>
+                <div id='career'>
+                    <p class="blue margin" data-content="henderson">Henderson's:</p>
+                    <!-- / -->
+                    <p class="blue" data-content="sawczuk">SAWCZUK:</p>
+                </div>
+                <div id='exit'>
+                    <p class="blue" data-content="email">E-Mail:</p>
+                    <p class="blue" data-content="linkedin">LinkedIn:</p>
+                    <p class="blue" data-content="github">GitHub:</p>
+                </div>
+            </section>
+            <section class="col-right-side">
+                <div id='mainR'>
+                    <p class="black">[Dawid Sawczuk]</p>
+                    <p class="black">[11/11/1993]</p>
+                    <p class="black margin">[Junior Back-End Developer]</p>
+                    <!-- / -->
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                </div>
+                <div id='skillsR'>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black margin">[Enabled]</p>
+                    <!-- / -->
+                    <p class="black">[Enabled]</p>
+                    <p class="black margin">[Enabled]</p>
+                    <!-- / -->
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                </div>
+                <div id='educationR'>
+                    <p class="black margin">[Finished]</p>
+                    <!-- / -->
+                    <p class="black">[Finished]</p>
+                </div>
+                <div id='careerR'>
+                    <p class="black margin">[Waiter]</p>
+                    <!-- / -->
+                    <p class="black">[Co-Owner]</p>
+                </div>
+                <div id='exitR'>
+                    <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
+                    <p class="black"><a target="_blank" href="https://linkedin.com/in/dawid-sawczuk">[Link]</a></p>
+                    <p class="black"><a target="_blank" href="https://github.com/dawidsawczuk">[Link]</a></p>
+                </div>
+            </section>
+        </div>
+        <div class="col-right">
+            <div class="top">
+                <p class="top-text">Item Specific Help</p>
+            </div>
+            <div class="content">
+                <div id="name">
+                    <p>System's given birth name.
+                        There is really not much more information about this.</p>
+                </div>
+                <div id="date">
+                    <p>After 9 months of development DawidSawczuk's Alpha 0.01 was published.</p>
+                </div>
+                <div id="functionality">
+                    <p>DawidSawczuk is currently learning to become Back-End Developer.
+                        That is exactly why, the perfect place for it's future development would be a
+                        dynamic company that would act as a mentor to it. <br/>
+                        His skills are improving everyday and functionality grows with every update. </p>
+                </div>
+                <div id="hobbies">
+                    <p>System's main activities besides programming are:
+                        <br/>
+                        -New Technologies
+                        <br/>
+                        -Electronics and tinkering with stuff
+                        <br/>
+                        -Robotics
+                        <br/>
+                        -Beer Brewing
+                        <br/>
+                        -World Politics (Skynet aspirations)
+                    </p>
+                </div>
+                <div id="cares">
+                    <p>DawidSawczuk as a highly developed AI cares about a range of topics.
+                        <br/>
+                        Some of which are:
+                        <br/>
+                        -Human Rights
+                        <br/>
+                        -Robots Rights
+                        <br/>
+                        -Environment
+                        <br/>
+                        -Science
+                        <br/>
+                        -Culture and Arts
+                    </p>
+                </div>
+                <div id="php">
+                    <p>System's PHP skills are adequate and are proven in projects like
+                        (see <a target="_blank" href="https://github.com/dawidsawczuk/">GitHub</a>):
+                        <br/>
+                        -Cellar-Symfony2
+                        <br/>
+                        -Twitter-Simple-PHP
+                        <br/>
+                        And more.</p>
+                </div>
+                <div id="symfony">
+                    <p>Symfony2 is System's main PHP framework to work with.
+                    <br/>DawidSawczuk's final CodersLab project(see <a target="_blank" href="https://github.com/dawidsawczuk/">GitHub</a>) is made entirely
+                    in Symfony and is under constant development.</p>
+                </div>
+                <div id="mysql">
+                    <p>INSERT INTO DawidSawczuk (DawidSawczukCPU) VALUES ('MySQL Skills');</p>
+                </div>
+                <div id="js">
+                    <p>JavaScript is DawidSawczuk's second programming langauge.</p>
+                </div>
+                <div id="jquery">
+                    <p>System's got pretty decent jQuery skills and likes to work with
+                    it.</p>
+                </div>
+                <div id="html">
+                    <p>System's got basic knowledge of HTML</p>
+                </div>
+                <div id="css">
+                    <p>System's got basic knowledge of CSS</p>
+                </div>
+                <div id="cl">
+                    <p>Life-changing course that finally put DawidSawczuk
+                        on the path to become programmer.
+                        <br/>
+                        System's finished Coders Lab in November 2016 with consecutive
+                        very high scores.
+                        <br/>
+                        Most of the programming skills were learned during this course
+                        and improved afterwards.</p>
+                </div>
+                <div id="pader">
+                    <p>System's last official education. DawidSawczuk finished
+                        International Baccalaureate and decided to pursue
+                    future education on it's own.</p>
+                </div>
+                <div id="henderson">
+                    <p>System's dabble in the hospitality industry.
+                        <br/>
+                        His main tasks were:
+                        <br/>
+                        -Cash register programming
+                        <br/>
+                        -Operating cash register
+                        <br/>
+                        -Taking care of the restaurant cleanliness
+                        <br/>
+                        -Managing inventory and stocking shelves
+                    </p>
+                </div>
+                <div id="sawczuk">
+                    <p>DawidSawczuk was managing a small company in construction industry
+                        with his father.
+                        <br/>
+                        His main tasks were:
+                        <br/>
+                        -Managing day-to-day operations
+                        <br/>
+                        -Taking care of the office
+                        <br/>
+                        -Loading materials
+                        <br/>
+                        -Managing inventory
+                    </p>
+                </div>
+                <div id="email">
+                    <p>Are you interested in contacting DawidSawczuk?
+                        <br/>
+                        Maybe want to implement DawidSawczuk into your company?
+                        <br/>
+                        Or just want to chat?
+                        <br/>
+                        Provided e-mail is the best way to do so!</p>
+                </div>
+                <div id="linkedin">
+                    <p>Press ENTER to open in a new tab.
+                        <br/>
+                        DawidSawczuk's more professional side.
+                    </p>
+                </div>
+                <div id="github">
+                    <p>Press ENTER to open in a new tab.
+                        <br/>
+                        DawidSawczuk's lifetime programming achievements.
+                    </p>
                 </div>
             </div>
-        </section>
-    </div>
-    <footer class="footer">
-        <div class="icon">F2 <span>Help</span></div>
-        <div class="arrows">↑↓ <span>Select Item</span></div>
-        <div class="arrows">← → <span>Select Menu</span></div>
-        <div class="icon">Enter <span>Select</span></div>
-        <div class="icon">Esc <span>Exit</span></div>
-        <div class="copyright">&copy; <a target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
-    </footer>
+        </div>
+    </section>
+</div>
+<footer class="footer">
+    <div class="icon">F2 <span>Help</span></div>
+    <div class="arrows">↑↓ <span>Select Item</span></div>
+    <div class="arrows">← → <span>Select Menu</span></div>
+    <div class="icon">Enter <span>Select</span></div>
+    <div class="icon">Esc <span>Exit</span></div>
+    <div class="copyright">&copy; <a target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a
+            target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
+</footer>
 </body>
 
 </html>
